--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Blooms</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Our Blooms — Home</title>
+
+  <link rel="stylesheet" href="./aem-demo/assets/css/global.css" />
 </head>
 <body>
+  <header id="header-slot">
+
+  </header>
+
+  <main id="content-slot">
+
+  </main>
+
+  <footer id="footer-slot">
     
+  </footer>
+
+  <script src="./aem-demo/assets/js/main.js"></script>
 </body>
 </html>
