--- a/index.html
+++ b/index.html
@@ -8,17 +8,10 @@
   <link rel="stylesheet" href="./aem-demo/assets/css/global.css" />
 </head>
 <body>
-  <header id="header-slot">
-
-  </header>
-
-  <main id="content-slot">
-
-  </main>
-
-  <footer id="footer-slot">
-    
-  </footer>
+  
+  <header id="header-slot"></header>
+  <main id="content-slot"></main>
+  <footer id="footer-slot"></footer>
 
   <script src="./aem-demo/assets/js/main.js"></script>
 </body>
