--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery view</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gallery.</title>
+
+  <link rel="stylesheet" href="./aem-demo/assets/css/global.css" />
 </head>
 <body>
-        
+  
+  <header id="header-slot"></header>
+  <main id="content-slot"></main>
+  <footer id="footer-slot"></footer>
+
+  <script src="./aem-demo/assets/js/main.js"></script>
+  <script src="./aem-demo/assets/js/modal.js"></script>
 </body>
 </html>
