--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <footer id="footer-slot"></footer>
 
   <script src="./aem-demo/assets/js/main.js"></script>
+  <script src="./aem-demo/assets/js/modal.js"></script>
 </body>
 </html>
