--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 
   <script src="./aem-demo/assets/js/main.js"></script>
   <script src="./aem-demo/assets/js/modal.js"></script>
+  <script src="./aem-demo/assets/js/nav.js"></script>
 </body>
 </html>
